--- a/css/style.css
+++ b/css/style.css
@@ -170,47 +170,64 @@ body {
   }
 }
 
-.page-header__logo,
-.page-header__search {
+.page-header__logo {
   display: block;
   margin: 0 auto;
   padding: 10px; 
-  /* width: 200px; */
-  /* height: 65px; */
+  padding-bottom: 5px;
+  width: auto;
+  height: 50px;
   
   text-align: center;
 }
 
-.page-header__search {
-  /* min-width: 300px; */
+.page-header__logo-image {
+  width: auto;
+  height: 50px;
 }
 
-.page-header__logo-image {
-  width: 180px;
-  /* height: 65px; */
-  height: auto;
-  /* height: 100%; */
-  /* підсвітка логотипу */
-  /* background-color: rgba(230,100,60,1.0); */
+.page-header__search {
+  display: block;
+  margin: 0 auto;
+  padding: 5px 10px;
+}
+
+.page-header__search form,
+.page-header__search .gsc-search-box,
+.page-header__search table {
+  /* margin-bottom: 0; */
 }
 
 @media (min-width: 768px) {
-  .page-header__logo,
+  .page-header__logo {
+    margin: 5px 20px; 
+    padding: 10px; 
+    height: 60px;
+  }
+  
+  .page-header__logo-image {
+    height: 60px;
+  }
+  
   .page-header__search {
-    margin: 15px 20px; 
-    /* height: 73px; */
+    margin: 5px 20px;
+    max-width: 250px;
   }
 }
 
 @media (min-width: 1024px) {
-  .page-header__logo,
-  .page-header__search {
-    margin: 20px 25px; 
+  .page-header__logo {
+    margin: 10px 25px;
+    height: 70px;
   }
   
   .page-header__logo-image {
-    width: 200px;
-    height: auto;
+    height: 70px;
+  }
+  
+  .page-header__search {
+    margin: 10px 25px; 
+    max-width: 300px;
   }
 }
 
