--- a/css/style.css
+++ b/css/style.css
@@ -727,11 +727,7 @@ body {
 }
 
 .left-column {
-  min-width: 150px;
-  margin: 0 10px;
-  padding: 0;
-  
-  /* background-color: #faf5f7; */
+  display: none;
 }
 
 @media (min-width: 768px) {
@@ -745,6 +741,8 @@ body {
   .left-column {
     display: block;
     /* width: 140px; */
+    margin: 0 10px;
+    padding: 0;
     width: 150px;
   }
 }
