--- a/css/style.css
+++ b/css/style.css
@@ -280,16 +280,17 @@ body {
   cursor: pointer;
   
   border: none;
-  border: 1px solid #cccccc;
+  /* border: 1px solid #cccccc; */
   background-color: rgba(255,255,255,1.0);
-  box-shadow: -2px 2px 4px 0px #cccccc;
+  background-color: transparent;
+  /* box-shadow: -2px 2px 4px 0px #cccccc; */
 }
 
 .site-nav__toggle:hover,
 .site-nav__toggle:active {
   /* background-color: rgba(0,0,0,0.01); */
   background-color: #fcfcfc;
-  box-shadow: -1px 1px 2px 0px #cccccc;
+  /* box-shadow: -1px 1px 2px 0px #cccccc; */
 }
 
 .site-nav--closed .site-nav__toggle::before {
@@ -313,12 +314,12 @@ body {
   top: 0;
   right: auto;
   left: 0;
-  box-shadow: 2px 2px 4px 0px #cccccc;
+  /* box-shadow: 2px 2px 4px 0px #cccccc; */
 }
 
 .site-nav--opened .site-nav__toggle:hover,
 .site-nav--opened .site-nav__toggle:active {
-  box-shadow: 1px 1px 2px 0px #cccccc;
+  /* box-shadow: 1px 1px 2px 0px #cccccc; */
 }
 
 .site-nav--opened .site-nav__toggle::before,
@@ -328,7 +329,7 @@ body {
   top: 50%;
   left: 10px;
   
-  width: 48px;
+  width: 40px;
   height: 2px;
   background-color: rgba(0,0,0,0.5);
 }
@@ -373,7 +374,7 @@ body {
 
 .site-nav__list {
   margin: 0;
-  margin-left: 60px;
+  /* margin-left: 60px; */
   padding: 0;
   
   list-style: none;
@@ -426,6 +427,7 @@ body {
   box-sizing: border-box;
   height: 50px; 
   padding: 15px 20px;
+  padding-bottom: 11px;
   
   font-size: inherit;
   line-height: inherit;
@@ -455,6 +457,7 @@ body {
 .site-list__item--active a {
   /* cursor: default; */
   /* border-bottom: 4px solid rgba(230,0,60,1.0); */
+  border-bottom: none;
 }
 
 @media (max-width: 767px) {
@@ -471,7 +474,9 @@ body {
     /* padding-right: 60px; */
     padding-right: 0;
     text-align: center;
-    border-bottom: 4px solid rgba(230,0,60,1.0);
+    /* border-bottom: 4px solid rgba(230,0,60,1.0); */
+    border-bottom: none;
+    box-shadow: 0 4px 0px 0px rgba(230,0,60,1.0);
   }
   
   .site-nav--opened .site-list {
@@ -496,10 +501,15 @@ body {
     /* box-shadow: inset 12px 0 12px -12px rgba(0, 0, 0, 0.4); */
   }
   
+  .site-nav--opened .site-list__item a {
+    padding-left: 70px;
+  }
+  
   .site-nav--opened .site-list__item--active a {
     /* border-bottom: none; */
     /* box-shadow: inset 0 -4px 0 0 rgba(230,0,60,1.0); */
-    border-bottom: 4px solid rgba(230,0,60,1.0);
+    /* border-bottom: 4px solid rgba(230,0,60,1.0); */
+    box-shadow: 0 4px 0px 0px rgba(230,0,60,1.0);
   }
   
   .site-nav--nojs .site-nav__toggle {
