--- a/css/style.css
+++ b/css/style.css
@@ -259,7 +259,8 @@ body {
 .site-nav {
   position: relative;
   margin: 0 auto;
-  width: 320px;
+  min-width: 320px;
+  width: auto;
   min-height: 50px;
   
   background-color: rgba(255,255,255,1.0);
@@ -435,7 +436,8 @@ body {
   text-decoration: none;
   text-transform: uppercase;
   
-  border-bottom: 1px solid #b3b3b3;
+  /* border-bottom: 1px solid #b3b3b3; */
+  box-shadow: 0 1px 0px 0px #cccccc;
 }
 
 /* .site-list__item a:hover { */
@@ -476,7 +478,7 @@ body {
     text-align: center;
     /* border-bottom: 4px solid rgba(230,0,60,1.0); */
     border-bottom: none;
-    box-shadow: 0 4px 0px 0px rgba(230,0,60,1.0);
+    box-shadow: 0 3px 0px 0px rgba(230,0,60,1.0);
   }
   
   .site-nav--opened .site-list {
@@ -539,6 +541,7 @@ body {
     padding: 15px 5px;
     
     border-bottom: none;
+    box-shadow: none;
   }
   
   .site-list__item a:hover {
