forbid display of the block .section__caption - promo
I forbid display of the block .section__caption - promo

забороняю відображення блоку .section__caption--promo

--- a/css/style.css
+++ b/css/style.css
@@ -842,6 +842,10 @@ body {
   border-top: 1px solid #cccccc;
 }
 
+.section__caption--promo {
+  display: none;
+}
+
 @media (min-width: 768px) {
   .section__caption {
     margin-bottom: 16px;
@@ -849,17 +853,17 @@ body {
   }
 }
 
-@media (min-width: 768px) {
-  .section__caption--promo {
-    display: none;
-  }
-}
+/* @media (min-width: 768px) { */
+  /* .section__caption--promo { */
+    /* display: none; */
+  /* } */
+/* } */
 
-@media (min-width: 1024px) {
-  .section__caption--promo {
-    display: none;
-  }
-}
+/* @media (min-width: 1024px) { */
+  /* .section__caption--promo { */
+    /* display: none; */
+  /* } */
+/* } */
 
 .page__title {
   margin: 0;
