--- a/css/style.css
+++ b/css/style.css
@@ -276,21 +276,18 @@ body {
   display: block;
   width: 70px;
   height: 50px;
+  padding: 0;
   
   color: white;
   cursor: pointer;
   
   border: none;
-  /* border: 1px solid #cccccc; */
-  background-color: rgba(255,255,255,1.0);
   background-color: transparent;
-  /* box-shadow: -2px 2px 4px 0px #cccccc; */
 }
 
 .site-nav__toggle:hover,
 .site-nav__toggle:active {
-  /* background-color: rgba(0,0,0,0.01); */
-  background-color: #fcfcfc;
+  /* background-color: rgba(250, 250, 250, 1); */
   /* box-shadow: -1px 1px 2px 0px #cccccc; */
 }
 
@@ -315,7 +312,6 @@ body {
   top: 0;
   right: auto;
   left: 0;
-  /* box-shadow: 2px 2px 4px 0px #cccccc; */
 }
 
 .site-nav--opened .site-nav__toggle:hover,
@@ -328,7 +324,7 @@ body {
   content: "";
   position: absolute;
   top: 50%;
-  left: 10px;
+  left: 15px;
   
   width: 40px;
   height: 2px;
@@ -491,17 +487,16 @@ body {
     background-color: rgba(255,255,255,1.0);
   }
   
-  .site-nav--opened .site-list::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 2;
-    width: 7px;
-    height: 100%;
-    box-shadow: inset 4px 0 7px -2px rgba(0, 0, 0, 0.4);
-    /* box-shadow: inset 12px 0 12px -12px rgba(0, 0, 0, 0.4); */
-  }
+  /* .site-nav--opened .site-list::before { */
+    /* content: ""; */
+    /* position: absolute; */
+    /* top: 0; */
+    /* left: 0; */
+    /* z-index: 2; */
+    /* width: 7px; */
+    /* height: 100%; */
+    /* box-shadow: inset 4px 0 7px -2px rgba(0, 0, 0, 0.4); */
+  /* } */
   
   .site-nav--opened .site-list__item a {
     padding-left: 70px;
@@ -511,7 +506,7 @@ body {
     /* border-bottom: none; */
     /* box-shadow: inset 0 -4px 0 0 rgba(230,0,60,1.0); */
     /* border-bottom: 4px solid rgba(230,0,60,1.0); */
-    box-shadow: 0 4px 0px 0px rgba(230,0,60,1.0);
+    box-shadow: 0 3px 0px 0px rgba(230,0,60,1.0);
   }
   
   .site-nav--nojs .site-nav__toggle {
