--- a/css/style.css
+++ b/css/style.css
@@ -807,13 +807,15 @@ body {
 }
 
 .page-main {
-  margin: 0 10px;
+  /* margin: 0 10px; */
+  margin: 0;
   margin-bottom: 28px;
   min-width: 300px;
 }
 
 @media (min-width: 768px) {
   .page-main {
+    margin: 0 10px;
     margin-bottom: 32px;
     min-width: 480px;
     width: 480px;
@@ -827,8 +829,9 @@ body {
   }
 }
 
-.section__caption {
-  margin: 0;
+.section__caption,
+.list__caption {
+  margin: 0 10px;
   margin-bottom: 14px;
   font-size: 14px;
   font-weight: normal;
@@ -837,12 +840,19 @@ body {
   border-top: 1px solid #cccccc;
 }
 
+.list__caption {
+  margin: 0;
+  margin-bottom: 14px;
+}
+
 .section__caption--promo {
   display: none;
 }
 
 @media (min-width: 768px) {
-  .section__caption {
+  .section__caption,
+  .list__caption {
+    margin: 0;
     margin-bottom: 16px;
     font-size: 16px;
   }
@@ -861,7 +871,7 @@ body {
 /* } */
 
 .page__title {
-  margin: 0;
+  margin: 0 10px;
   margin-bottom: 16px;
   font-size: 18px;
   line-height: 24px;
@@ -879,6 +889,7 @@ body {
 
 @media (min-width: 768px) {
   .page__title {
+    margin: 0;
     font-size: 20px;
     line-height: 24px;
   }
@@ -914,7 +925,7 @@ body {
 .promo {
   position: relative;
   min-height: 100px;
-  margin: 0;
+  margin: 0 10px;
   margin-bottom: 28px;
   margin-right: 10px;
   padding-left: 110px;
@@ -924,6 +935,7 @@ body {
 @media (min-width: 768px) {
   .promo {
     /* padding-bottom: 32px; */
+    margin: 0;
     margin-bottom: 32px;
   }
 }
@@ -990,13 +1002,14 @@ body {
 }
 
 .compositions {
-  margin: 0;
+  margin: 0 10px;
   margin-bottom: 14px;
   /* border-bottom: 1px solid rgba(0,0,0,0.2); */
 }
 
 @media (min-width: 768px) {
   .compositions {
+    margin: 0;
     margin-bottom: 16px;
   }
 }
@@ -1265,7 +1278,7 @@ body {
 
 .composition__info,
 .composition__lyric {
-  margin: 0;
+  margin: 0 10px;
   margin-top: 14px;
   margin-bottom: 14px;
   padding-bottom: 21px;
@@ -1276,6 +1289,7 @@ body {
 @media (min-width: 768px) {
   .composition__info,
   .composition__lyric {
+    margin: 0;
     font-size: 16px;
     margin-top: 16px;
     margin-bottom: 16px;
@@ -1501,13 +1515,14 @@ body {
 }
 
 .composition__release {
-  margin: 0;
+  margin: 0 10px;
   margin-top: 14px;
   margin-bottom: 14px;
 }
 
 @media (min-width: 768px) {
   .composition__release {
+    margin: 0;
     margin-top: 16px;
     margin-bottom: 16px;
   }
