--- a/css/style.css
+++ b/css/style.css
@@ -384,12 +384,12 @@ body {
 
 @media (min-width: 768px) {
   .site-nav {
-    width: 748px;
-    padding: 0;
     margin: 0 auto;
+    padding: 0 10px;
+    width: 748px;
     min-height: auto;
     
-    background-color: transparent;
+    /* background-color: transparent; */
     box-shadow: 0 1px 0px 0px #cccccc;
   }
 
