--- a/css/style.css
+++ b/css/style.css
@@ -860,14 +860,14 @@ body {
 .page-main {
   /* margin: 0 10px; */
   margin: 0;
-  margin-bottom: 28px;
+  margin-bottom: 48px;
   min-width: 300px;
 }
 
 @media (min-width: 768px) {
   .page-main {
     margin: 0 10px;
-    margin-bottom: 32px;
+    margin-bottom: 48px;
     min-width: 480px;
     width: 480px;
   }
@@ -934,7 +934,7 @@ body {
 }
 
 .page__description {
-  margin: 0;
+  margin: 0 10px;
   margin-bottom: 32px;
 }
 
@@ -1022,7 +1022,6 @@ body {
 .promo__title a {
   color: inherit;
   text-decoration: none;
-  /* border-bottom: 1px solid #cccccc; */
   border-bottom: 1px solid rgba(0,0,0,0.2);
 }
 
@@ -1058,6 +1057,11 @@ body {
   /* border-bottom: 1px solid rgba(0,0,0,0.2); */
 }
 
+.compositions .p1,
+.compositions p {
+  font-weight: bold;
+}
+
 @media (min-width: 768px) {
   .compositions {
     margin: 0;
@@ -1065,9 +1069,13 @@ body {
   }
 }
 
+.types-list {
+  margin: 0 10px;
+}
+
 .compositions__list,
-.types__list,
 .names__list,
+.types__list,
 .titles__list,
 .releases__list {
   margin: 0;
@@ -1083,45 +1091,67 @@ body {
 }
 
 .compositions__list li,
-.types__list li,
 .names__list li,
+.types__list li,
 .titles__list li,
 .releases__list li {
   margin: 0;
-  margin-bottom: 4px;
+  margin-bottom: 5px;
 }
 
-@media (min-width: 768px) {
-  .compositions__list li,
-  .types__list li,
-  .names__list li,
-  .titles__list li,
-  .releases__list li {
-    margin-bottom: 4px;
-  }
+.compositions__link,
+.names__link {
+  display: flex;
+  
+  font-size: 14px;
+  line-height: 22px;
+  text-decoration: none;
 }
 
-.compositions__list time,
-.compositions__list .compositions__date {
-  font-size: 13px;
+.compositions__link .compositions__date,
+.names__link .names__date {
+  margin-right: 4px;
   color: rgba(0,0,0,0.5);
+  
+  white-space: nowrap;
+  box-shadow: 0 1px 0px 0px rgba(0,0,0,0.2);
+}
+
+.compositions__link .compositions__title,
+.names__link .names__title {
+  color: rgba(0,0,0,0.8);
+  font-weight: normal;
+  
+  box-shadow: 0 1px 0px 0px rgba(0,0,0,0.2);
 }
 
 @media (min-width: 768px) {
-  .compositions__list time,
-  .compositions__list .compositions__date {
-    font-size: 15px;
+  .types-list {
+    margin: 0;
+  }
+  
+  .compositions__link,
+  .names__link {
+    font-size: 16px;
+    line-height: 24px;
   }
 }
 
-.compositions__list b,
-.compositions__list .compositions__title {
-  font-weight: normal;
+@media (min-width: 768px) {
+  .compositions__link .compositions__date,
+  .names__link .names__date {
+    font-size: 15px;
+    line-height: 24px
+  }
+  
+  .compositions__link .compositions__title,
+  .names__link .names__title {
+    font-size: 16px;
+    line-height: 24px
+  }
 }
 
-.compositions__list a,
 .types__list a,
-.names__list a,
 .titles__list a,
 .releases__list a {
   font-size: 14px;
@@ -1133,8 +1163,6 @@ body {
 }
 
 @media (min-width: 768px) {
-  .compositions__list a,
-  .names__list a,
   .titles__list a,
   .releases__list a {
     font-size: 16px;
@@ -1142,9 +1170,7 @@ body {
   }
 }
 
-.compositions__list a:hover,
 .types__list a:hover,
-.names__list a:hover,
 .titles__list a:hover,
 .releases__list a:hover {
   color: rgba(0,0,0,1.0);
@@ -1152,9 +1178,102 @@ body {
 }
 
 .releases__list a:hover .compositions__date,
-.compositions__list a:hover .compositions__date {
+.compositions__link:hover .compositions__date,
+.names__link:hover .names__date {
   color: rgba(0,0,0,0.7);
+  
+  box-shadow: 0 1px 0px 0px rgba(0,0,0,0.7);
 }
+
+.compositions__link:hover .compositions__title,
+.names__link:hover .names__title {
+  color: rgba(0,0,0,1.0);
+  
+  box-shadow: 0 1px 0px 0px rgba(0,0,0,0.7);
+}
+
+.pagination {
+  margin: 0 auto;
+  /* margin-top: 20px; */
+  margin-top: 32px;
+}
+
+.pagination__list {
+  list-style: none;
+  display: flex;
+  padding: 0; 
+  /* width: 300px; */
+  
+  justify-content: center;
+}
+
+.pagination__link,
+.pagination__link--nonactive {
+  display: block;
+  margin-right: 10px;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  
+  font-size: 16px;
+  line-height: 30px;
+  color: #111111;
+  
+  text-decoration: none;
+  text-align: center;
+  
+  background-color: rgba(57, 172, 230, 0.5);
+}
+
+.pagination__link--nonactive {
+  background-color: rgba(57, 172, 230, 0.2);
+}
+
+.pagination__item:last-child .pagination__link {
+  margin-right: 0;
+}
+
+.pagination__link:not(.pagination__link--active):hover {
+  background-color: rgba(57, 172, 230, 0.2);
+}
+
+.pagination__link--active {
+  text-align: center;
+  color: #ffffff;
+  
+  background-color: rgba(57, 172, 230, 1.0);
+}
+
+.pagination__link--arrow {
+  display: block;
+  width: 30px;
+  height: 25px;
+  
+  /* border-radius: 25%; */
+  /* background-color: #f5f5f5; */
+}
+
+.pagination__arrow {
+  display: block;
+  width: 30px;
+  height: 15px;
+}
+
+.pagination__arrow {
+  padding: 5px 0;
+  fill: #111111;
+}
+
+.pagination__arrow--active {
+  fill: #9b0c23;
+}
+
+@media (min-width: 768px) {
+  .pagination {
+    margin-bottom: 32px;
+  }
+}
+
 
 .the-end {
   font-weight: bold;
@@ -1227,26 +1346,19 @@ body {
 
 .release__info,
 .notes__info {
-  margin: 0;
+  margin: 0 10px;
   margin-top: 14px;
   margin-bottom: 28px;
   font-size: 14px;
 }
 
-.notes__info {
-  margin-bottom: 21px;
-}
-
 @media (min-width: 768px) {
   .release__info,
-  .notes__info  {
+  .notes__info {
     font-size: 16px;
+    margin: 0;
     margin-top: 16px;
-    margin-bottom: 32px;
-  }
-  
-  .notes__info  {
-    margin-bottom: 24px;
+    margin-bottom: 36px;
   }
 }
 
@@ -1337,6 +1449,10 @@ body {
   border-bottom: 1px solid #cccccc;
 }
 
+.composition__info.composition__comment {
+  padding-bottom: 7px;
+}
+
 @media (min-width: 768px) {
   .composition__info,
   .composition__lyric {
@@ -1345,6 +1461,10 @@ body {
     margin-top: 16px;
     margin-bottom: 16px;
     padding-bottom: 24px;
+  }
+  
+  .composition__info.composition__comment {
+    padding-bottom: 8px;
   }
 }
 
@@ -1413,7 +1533,11 @@ body {
 
 .notes__data {
   margin: 7px 0;
-} 
+}
+
+.notes__data + .notes__picture {
+  margin-top: 14px;
+}
 
 .composition__subject {
   margin-top: 14px;
@@ -1435,7 +1559,11 @@ body {
 
   .notes__data {
     margin: 8px 0;
-  } 
+  }
+  
+  .notes__data + .notes__picture {
+    margin-top: 16px;
+  }
   
   .composition__subject {
     margin-top: 16px;
@@ -1863,7 +1991,8 @@ body {
 
 @media (min-width: 1024px) {
   .page-footer__container {
-    width: 980px;
+    /* width: 980px; */
+    width: 1010px;
   }
 }
 
@@ -1893,7 +2022,8 @@ body {
   .page-footer__top,
   .page-footer__nav,
   .page-footer__bottom {
-    width: 980px;
+    /* width: 980px; */
+    width: 1010px;
   }
 }
 
